tests/ui/const-generics/unused-type-param-suggestion.rs
#![crate_type="lib"]

struct Example<N>;
//~^ ERROR parameter
